--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forms Navigation</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    button { margin: 10px; padding: 10px 20px; font-size: 16px; }
+    * { font-family: 'Cairo', sans-serif; }
+    body {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      direction: rtl;
+      text-align: right;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .nav-container {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      padding: 40px 30px;
+      max-width: 400px;
+      margin: 40px auto;
+      text-align: center;
+    }
+    h1 {
+      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+      color: white;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 30px;
+      font-size: 2rem;
+      font-weight: 700;
+      box-shadow: 0 4px 12px rgba(76, 81, 255, 0.1);
+    }
+    .nav-btn {
+      display: block;
+      width: 100%;
+      margin: 15px 0;
+      padding: 15px 0;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #fff;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.2s;
+      box-shadow: 0 2px 8px rgba(76, 81, 255, 0.08);
+    }
+    .nav-btn:hover {
+      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+    }
+    .fa-store, .fa-users {
+      margin-left: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome</h1>
-  <button onclick="location.href='/form1'">Go to Form 1</button>
-  <button onclick="location.href='/form2'">Go to Form 2</button>
+  <div class="nav-container">
+    <h1>مرحباً بك</h1>
+    <button class="nav-btn" onclick="location.href='/form1'"><i class="fa fa-store"></i> الذهاب إلى استبيان أصحاب المتاجر</button>
+    <button class="nav-btn" onclick="location.href='/form2'"><i class="fa fa-users"></i> الذهاب إلى استبيان العملاء</button>
+  </div>
 </body>
 </html>
